# Digi4K

./: .gitignore  MANIFEST.in  README.md  requirements.txt  setup.cfg
digi4k/: __main__.py  main.py  sort_hack.py
digi4k/data/charts/test/: test.json
digi4k/data/overrides/: overrides.txt
digi4k/data/tutorial/: tutorial-hard.json
digi4k/lib/: draw_objects.py  gamemanager.py  inputmanager.py  objects.py  pgutils.py  ptext.py  songmanager.py  utils.py
digi4k/lib/objects/: inputparser.py  keybinder.py  note.py  songmanager.py
docs/: BlankFNFChart.json  charttype.json  charttype.ts
tests/: songparser_test.py
