[metadata]
name = digi4k
version = attr: digi4k.__version__
description = digi4k
long_description = file: README.md
long_description_content_type = text/markdown
author = DigiDuncan
author_email = digiduncan@gmail.com
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
keywords = 
project_urls =
    Source=https://github.com/digiduncan/digi4k
    Tracker=https://github.com/digiduncan/digi4k/issues

[options]
packages = find:
python_requires = >=3.9
zip_safe = yes
include_package_data = True
install_requires =
    pygame==2.0.1
    nygame==1.3.0

[options.extras_require]
dev =
    pytest==6.2.5
    flake8==3.9.2
    autopep8==1.5.7

[flake8]
ignore = E241,E251,E501,W503,E266,E114,E116
per-file-ignores =
    */__init__.py:F401
